# claude-cache-analyzer

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
claude_cache_analyzer/: __init__.py  cli.py  metrics.py  parser.py  pricing.py  report.py
tests/: test_metrics.py  test_parser.py  test_pricing.py  test_session_detail.py
tests/fixtures/: sample_session.jsonl
